# confluence-script-runner

./: .editorconfig  .gitlab-ci.yml  .pre-commit-config.yaml  ChatGPT explicacion PathParams para formato EXPAND+PDF.url  LICENSE  README.md  confluence-script-runner.cmd  dependant-pages-reader.plain.py  dependant-pages-reader.py  getosdate.cmd  output-sample.json  page-append.py  page-writer.py  pyproject.toml  requeriments.txt  setup.cfg  single-page-reader.py
