[tool.poetry]
name = "confluence-runner-script"
version = "0.1.0"
description = ""
authors = ["Martin D Cernadas"]
license = "MIT"
readme = "README.md"
homepage = "https://gitlab.com/telecom-argentina/coo/fintech/pepa-architecture-sandbox/confluence-script-runner/confluence-runner-script"
repository = "https://gitlab.com/telecom-argentina/coo/fintech/pepa-architecture-sandbox/confluence-script-runner/confluence-runner-script"

[tools.poetry.urls]
"Bug Tracker" = "https://gitlab.com/telecom-argentina/coo/fintech/pepa-architecture-sandbox/confluence-script-runner/confluence-runner-script/-/issues"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.13.0"
flake8 = "^3.9.2"

[tool.poetry.extras]
pipfile_deprecated_finder = ["pip-shims<=0.3.4"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
skip_gitignore = true
line_length = 88
multi_line_output = 3
py_version = "38"

[tool.black]
line-length = 88
target-version = ["py39"]
